--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="JAVASCRIPT/login.js"></script>
   <script src="./JAVASCRIPT/menu.js"></script>
   <script src="./JAVASCRIPT/app.js"></script>
+  <script src="JAVASCRIPT/observador.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/pulse/bootstrap.min.css">
   </head>
@@ -52,4 +53,5 @@
       </div>
     
 </body>
+
 </html>
